fix modal on ie9

--- a/src/styles/embeds/sass/conditional.scss
+++ b/src/styles/embeds/sass/conditional.scss
@@ -1,7 +1,7 @@
 .modal {
   display: none;
 
-  &.is-active {
+  .is-active & {
     display: block;
     opacity: 1;
     margin-left: auto;
